--- a/data/README.html
+++ b/data/README.html
@@ -375,7 +375,22 @@ summary {
 <div id="codebook" class="section level3">
 <h3>Codebook:</h3>
 <p><code>Variable Name                  --&gt; Description</code></p>
-<p><code>id                             --&gt; The specific listing's ID value from the Airbnb website.</code> <code>name                           --&gt; Host-produced description of the listing.</code> <code>host_id                        --&gt; The ID unique for the listing's owner.</code> <code>host_name                      --&gt; First name of host/hosts.</code> <code>neighbourhood_group            --&gt; One of the NYC five boroughs (Manhattan, Brooklyn, Queens, Staten Island, Bronx)</code> <code>neighbourhood                  --&gt; Specific area within each of the boroughs.</code> <code>latitude                       --&gt; Horizontal global coordinate.</code> <code>longitude                      --&gt; Vertical global coordinate.</code> <code>room_type                      --&gt; One of three classifications (Etire home/apartment, Private Room, or Shared Room).</code> <code>price                          --&gt; The listing's price in United States dollars per night.</code> <code>minimum_nights                 --&gt; The minimum nights required by the host to stay.</code> <code>number_of_reviews              --&gt; Quantity of online reviews given for a listing.</code> <code>last_review                    --&gt; Year/Month/Date of the most recent review.</code> <code>reviews_per_month              --&gt; Quantity of reviews on average in a given month.</code> <code>calculated_host_listings_count --&gt; Number of listings per one host.</code> <code>availability_365               --&gt; Quantity of days in which the listing is available.</code></p>
+<p><code>id                             --&gt; The specific listing's ID value from the Airbnb website.</code></p>
+<p><code>name                           --&gt; Host-produced description of the listing.</code></p>
+<p><code>host_id                        --&gt; The ID unique for the listing's owner.</code></p>
+<p><code>host_name                      --&gt; First name of host/hosts.</code></p>
+<p><code>neighbourhood_group            --&gt; One of the NYC five boroughs (Manhattan, Brooklyn, Queens, Staten Island, Bronx)</code></p>
+<p><code>neighbourhood                  --&gt; Specific area within each of the boroughs.</code></p>
+<p><code>latitude                       --&gt; Horizontal global coordinate.</code></p>
+<p><code>longitude                      --&gt; Vertical global coordinate.</code></p>
+<p><code>room_type                      --&gt; One of three classifications (Etire home/apartment, Private Room, or Shared Room).</code></p>
+<p><code>price                          --&gt; The listing's price in United States dollars per night.</code></p>
+<p><code>minimum_nights                 --&gt; The minimum nights required by the host to stay.</code></p>
+<p><code>number_of_reviews              --&gt; Quantity of online reviews given for a listing.</code></p>
+<p><code>last_review                    --&gt; Year/Month/Date of the most recent review.</code></p>
+<p><code>reviews_per_month              --&gt; Quantity of reviews on average in a given month.</code></p>
+<p><code>calculated_host_listings_count --&gt; Number of listings per one host.</code></p>
+<p><code>availability_365               --&gt; Quantity of days in which the listing is available.</code></p>
 </div>
 </div>
 
